Wed May  8 10:58:15 2002  Alex Libman <AlexL@rumblegroup.com>

	* tests/Proactor_Test.cpp: Fixed the test to work right on
	  Linux. Turned off full traces, only the error messages and
	  statistics will go to the log.
	  
Wed May  8 06:14:08 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Filecache.cpp (R_MASK): Allow file sharing by default.
	  Thanks to  Peter Kullmann" <P.Kullmann@rog.de> for reporting
	  this. 

Tue May 07 21:03:01 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.cpp:

	  Removed vestigial debugging code.

Tue May 07 17:42:16 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/OS.i: Added missing "\".

Tue May  7 16:45:13 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/ACE.cpp (handle_timed_complete):

          Check for the return value from ACE_OS::getsockopt(). Return
          ACE_INVALID_HANDLE if return value is -1. Thanks to Jonathan
          Wackley <jwackley@legato.com> for reporting this.

        * ace/OS.i (ACE_LACKS_SETREUID_PROTOTYPE):

          Check if we are compiling with gcc in addition to checking for
          _XOPEN_SOURCE. GCC unconditionally turns on _XOPEN_SOURCE, but
          it is not defined in Solaris 2.5.1. So this hack to expose the
          missing prototypes of setreuid() and setregid(). Thanks to
          Jonathan Wackley <jwackley@legato.com> for reporting this.

        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Cosmetic fixes.

Tue May 07 15:44:41 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Reverted the change "Tue May 07 15:15:30
	  2002  Balachandran Natarajan  <bala@cs.wustl.edu>". Got an idea
	  waht was going wrong with the test and fixed that.

Tue May 07 15:15:30 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Removed No_Server_MT_Connect_Test from
	  the daily builds. The testing methodology needs to be
	  rethought. Thanks to Ru for ppointing out that the test is